# yc-ai-bio

./: .env.example  .gitignore  .gitmodules  README.md  emg_model_server_setup.md  pyproject.toml  todo.md
alwaysonpt/: adapter_plots.py  adapter_router.py  biosignal_agent.py  data_loader.py  data_loader_live.py  demo.py  emg_model_bridge.py  emg_tools.py  eval_harness.py  gait_analyzer.py  imu_tools.py  ood_eval.py  requirements.txt  rlm_agent.py  server.py  signal_tools.py  synthetic.py  task_prompts.py
alwaysonpt/datasets/: __init__.py  base.py  chf2db_loader.py  chfdb_loader.py  gaitndd_loader.py  gaitpdb_loader.py  ptbxl_loader.py  questions.py
alwaysonpt/static/: index.html
data/live_data_sample/: emg_recording_1773014366.json  emg_recording_1773014420.json
data/multichannel_emg/: multichannel_squat.json  multichannel_stair_climb.json  multichannel_walking.json
emg_model_server/: __init__.py  api.py  bridge.py  config.py  registry.py  server.py  service.py  types.py
emg_model_server/experts/: __init__.py  base.py  effort_adapter.py  emg2pose_adapter.py  emg_gesture_adapter.py  fatigue_adapter.py  mock_intent_adapter.py  mock_pose_adapter.py  reactemg_adapter.py
emg_model_server/fusion/: __init__.py
emg_model_server/io/: __init__.py  loader.py
emg_model_server/preprocessing/: __init__.py  pipeline.py
ios/AlwaysOnPT/Models/: BLEManager.swift  IMUManager.swift  SensorFrame.swift  StreamingService.swift
live_sensor_demo/: README.md  download_data.sh
scripts/: download_datasets.sh  download_models.sh  emg2pose_api.py  setup.sh  verify_models.py
(+42 files in other folders)
